# KY-Cyber-Agent

./: .gitignore  README.md  ganimet.txt  hacker_kaynaklari.txt  pyproject.toml  sizma_testi_raporu.md  sızma_testi_raporu_10.113.186.12.md
src/ky_sec_crew/: crew.py  main.py
src/ky_sec_crew/config/: agents.yaml  tasks.yaml
src/ky_sec_crew/tools/: custom_tool.py
