[project]
name = "ky_sec_crew"
version = "0.1.0"
description = "ky_sec_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "requests>=2.34.2",
]

[project.scripts]
ky_sec_crew = "ky_sec_crew.main:run"
run_crew = "ky_sec_crew.main:run"
train = "ky_sec_crew.main:train"
replay = "ky_sec_crew.main:replay"
test = "ky_sec_crew.main:test"
run_with_trigger = "ky_sec_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
